fix: hide scrollbar after adding picture :collision:

--- a/style/index.css
+++ b/style/index.css
@@ -5,3 +5,7 @@ html {
   width: 650px;
   overflow: hidden;
 }
+
+::-webkit-scrollbar {
+  width: 0;
+}
